assets/css/styles.css
/* PRIMEIRA SEÇÃO */
.intro-content{
    position: relative;
    /* top: -8rem; */
    display: grid;
    grid-template-columns: 1fr 1.5fr;
    gap: var(--gap);
    align-items: center;
    min-height: 100vh;
}

.intro-text-content, .intro-img{
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
}

.intro-img img{
    max-width: 100%;
    height: auto;
}

/* SEÇÃO TOP 3 */
.top3-content{
    max-width: 64rem;
    min-height: 100vh;
    display: block;
    justify-content: center;
    text-align: center;
}

/* SEÇÃO JOBS E GALLERY */
.grid-one-content{
    min-height: 100vh;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
}

.grid-main-heading{
    margin-bottom: 1rem;
}

.grid-description{
    padding-bottom: 6rem;
}

.grid{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: var(--gap);
    counter-reset: grid-counter;
}

.grid h3{
    font-size: 3rem;
    position: relative;
    padding-left: 5rem;
    padding-bottom: 2rem;
}

.grid h3::before{
    counter-increment: grid-counter;
    content: counter(grid-counter);
    position: absolute;
    font-size: 8rem;
    font-style: italic;
    top: -4rem;
    left: -2rem;
    transform: rotate(5deg);
}

/* GALLERY */
.gallery-img{
    width: 100%;
    max-width: 36rem;
    max-height: 36rem;
    overflow: hidden;
}

.gallery-img img{
    border: 2px solid black;
    transition: all 300ms ease-in-out;
}

.gallery-img img:hover{
    transform: scale(1.2) rotate(3deg);
}

/* SEÇÃO TABELA */
.responsive-table {
    width: 100%;
    overflow-x: auto;
}

/* SEÇÃO FORMS */
.contact-form{
    grid-column: span 2;
    margin-right: 2.5rem;
}

.contact-form .form-grid{
    border: none;
    display: flex;
    flex-flow: row wrap;
    gap: var(--gap);
}

.form-grid legend{
    font-style: italic;
    font-size: 1.6rem;
    margin-bottom: 3rem;
}

.form-group{
    flex: 1 1 32rem;
}

.form-group label{
    display: block;
    margin-bottom: 1rem;
}

.form-group input,
.form-group textarea{
    border: none;
    background-color: var(--light-gray-color);
    padding: 1.5rem 2rem;
    width: 100%;
    font-size: 2rem;
}

.form-group input:focus,
.form-group textarea:focus{
    box-shadow: 0 0 3px 3px var(--secondary-color);
}

.form-group button{
    border: 0.5rem solid var(--white-color);
    background: none;
    color: var(--white-color);
    padding: 1.5rem 2rem;
    font-size: 3rem;
    cursor: pointer;
    transition: all 300ms ease-in-out;
}

.form-group button:hover{
    background: var(--white-color);
    color: var(--primary-color);
}

.form-group ::placeholder{
    color: #00000068;
}

/* FOOTER */
.footer{
    text-align: center;
    font-size: 1.6rem;
}

.footer a{
    color: inherit;
}

.footer p{
    margin: 0;
    padding: 1rem 0;
}

/* BOTÃO PARA VOLTAR AO HOME */
.back-to-top{
    position: fixed;
    bottom: 2rem;
    right: 2rem;
    background-color: var(--primary-color);
    width: 5rem;
    height: 5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    border: 0.1rem solid var(--primary-color);
    color: var(--white-color);
    transform: rotate(270deg);
}

/* RESPONSIVIDADE EM TELAS MENORES */
@media (max-width: 850px){
    .intro-content, .grid{
        grid-template-columns:1fr 1fr;
    }

    .grid-one-content{
        display: block;
    }
}

@media (max-width: 700px) {
    .intro-content, .grid{
        grid-template-columns: 1fr;
    }

    .gallery-img{
        width: 100%;
        max-width: 100%;
        max-height: 100%;
    }

    .gallery-img img{
        width: 100%;
    }

    .grid-one-content{
        display: block;
    }
}


@media (max-width: 960px){
    .gallery-img{
        width: 100%;
        max-width: 100%;
        max-height: 100%;
    }

    .gallery-img img{
        width: 100%;
    }

    .grid-one-content{
        display: block;
    }
}

